# pcl_filteration

./: 0.pcd  CMakeLists.txt  PassThroughfilter.cpp  bladePointcloud.cpp  cloud_cluster_0.pcd  cloud_cluster_1.pcd  clustring.cpp  drawPlane.cpp  filterBladeWithOrigin.cpp  filteredPointCloud.cpp  magnitudeWDirection.cpp  planeFitting.cpp  readPointCloud.cpp
data/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  offsetCalcCorrected.csv  rotAngles.csv
data/data/: cloud_cluster_0._r_0.01.pcd  cloud_cluster_0.pcd  cloud_cluster_0_r_0.09.pcd  cloud_cluster_1.pcd  cloud_cluster_1_0.01.pcd  cloud_cluster_1_r_0.09.pcd  measuredAngles.csv  offsetCalc.csv  test.pcd  text.txt
data/data_set/1/: 1.pcd
data/data_set/10/: 10.pcd
data/data_set/2/: 2.pcd
data/data_set/3/: 3.pcd
data/data_set/4/: 4.pcd
data/data_set/5/: 5.pcd
data/data_set/6/: 6.pcd
data/data_set/7/: 7.pcd
data/data_set/8/: 8.pcd
data/data_set/9/: 9.pcd
include/: bladAngleDetection.hpp
script/: readCsv.ipynb
src/: PassThroughfilter.cpp  bladAngleDetection.cpp  bladePointcloud.cpp  clustring.cpp  don.cpp  drawPlane.cpp  filteredPointCloud.cpp  main.cpp  planeFitting.cpp  readPointCloud.cpp  scratchScript.cpp  writeCsv.cpp
